--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -21,25 +21,27 @@
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap-multiselect/css/bootstrap-multiselect.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" />
 
-
     <script src="{{system_base}}/dist/main.js"></script>
 
-    <script src="{{system_base}}/dist/bootstrap-multiselect/js/bootstrap-multiselect.js" />
+    <script src="{{system_base}}/dist/bootstrap-multiselect/js/bootstrap-multiselect.js"></script>
 
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap3-editable/css/bootstrap-editable.css" />
     <script src="{{system_base}}/dist/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
-
-
     {% for c in css %}
-    <link rel="stylesheet" href="{{c|raw}}"> {% endfor %}
+    <link rel="stylesheet" href="{{c|raw}}">
+    {% endfor %}
 
     {% for js in jquery %}
-    <script src="{{js|raw}}"></script> {% endfor %} {% if firebase %}
-    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" defer></script> {% endif %}
+    <script src="{{js|raw}}"></script>
+    {% endfor %}
+    {% if firebase %}
+    <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js" defer></script>
+    {% endif %}
 
     {% for js in vue %}
-    <script src="{{js|raw}}"></script> {% endfor %}
+    <script src="{{js|raw}}"></script>
+    {% endfor %}
 
 
     <script src="{{system_base}}/dist/x-html/x-html.umd.min.js"></script>
@@ -605,7 +607,8 @@
 
 
     {% for src in script %}
-    <script src="{{src|raw}}"></script> {% endfor %}
+    <script src="{{src|raw}}"></script>
+    {% endfor %}
 
 </body>
 
