fix login font sewsome

--- a/AdminLTE/pages/login.html
+++ b/AdminLTE/pages/login.html
@@ -10,6 +10,8 @@
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="{{system_base}}/dist/font-awesome/css/all.min.css" />
+
 
     {% for js in vue.setting.js %}
     <script src="{{vue.base}}/{{js|raw}}"></script>
