--- a/AdminLTE/pages/login.html
+++ b/AdminLTE/pages/login.html
@@ -19,6 +19,7 @@
 
     <script src="{{system_base}}/dist/main.js"></script>
     <script src="{{system_base}}/dist/login.js" defer></script>
+    <script src="/r-webauthn/dist/main.js" defer></script>
 
     {% for c in css %}
     <link rel="stylesheet" href="{{c|raw}}">
