--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/font-awesome/css/all.min.css" />
 
+    <script src="{{system_base}}/dist/r-webauthn/main.js" defer></script>
     <script src="{{system_base}}/dist/jquery/jquery.min.js"></script>
     <script src="{{system_base}}/dist/main.js"></script>
     <script src="{{system_base}}/dist/layout.js" defer></script>
