--- a/AdminLTE/pages/login.html
+++ b/AdminLTE/pages/login.html
@@ -18,9 +18,10 @@
     {% endfor %}
 
     <script src="{{system_base}}/dist/main.js"></script>
-    <script src="{{system_base}}/dist/login.js" defer></script>
+    <script src="{{system_base}}/src/login.js" defer></script>
     <script src="{{system_base}}/dist/r-webauthn/main.js" defer></script>
-
+    <script src="{{system_base}}/js/vue-gql.js"></script>
+    <script src="{{system_base}}/js/jquery.form-data.js"></script>
 
     {% for c in css %}
     <link rel="stylesheet" href="{{c|raw}}">
@@ -91,7 +92,7 @@
 
 
     <template id="forget_dialog">
-        <form action="System/login/forget_password" method="post">
+        <form>
             <div class="form-group">
                 <label>Username</label>
                 <input class="form-control" type="text" name="username" required />
