--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -63,6 +63,9 @@
     <script src="{{system_base}}/dist/vue-bs/bs.umd.min.js"></script>
     <link rel="stylesheet" href="{{system_base}}/dist/alt-component/alt-component.css" />
 
+    <script src="{{system_base}}/js/vue-gql.js"></script>
+    <script src="{{system_base}}/js/jquery.form-data.js"></script>
+
     
 </head>
 
