--- a/AdminLTE/pages/login.html
+++ b/AdminLTE/pages/login.html
@@ -18,7 +18,7 @@
     {% endfor %}
 
     <script src="{{system_base}}/dist/main.js"></script>
-    <script src="{{system_base}}/src/login.js" defer></script>
+    <script src="{{system_base}}/dist/login.js" defer></script>
     <script src="{{system_base}}/dist/r-webauthn/main.js" defer></script>
     <script src="{{system_base}}/js/vue-gql.js"></script>
     <script src="{{system_base}}/js/jquery.form-data.js"></script>
