--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -29,6 +29,7 @@
 
     <script src="{{system_base}}/dist/r-webauthn/main.js" defer></script>
     <script src="{{system_base}}/dist/jquery/jquery.min.js"></script>
+    <script src="{{system_base}}/plugins/jquery-ui-1.11.4/jquery-ui.min.js"></script>
     <script src="{{system_base}}/dist/main.js"></script>
     <script src="{{system_base}}/dist/layout.js" defer></script>
 
