--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap-datepicker/css/bootstrap-datepicker3.min.css" />
     <link rel="stylesheet" href="{{system_base}}/dist/font-awesome/css/all.min.css" />
 
+    <link rel="stylesheet" href="{{system_base}}/plugins/icheck-bootstrap-3.0.1/icheck-bootstrap.min.css" />
+
     <script src="{{system_base}}/dist/r-webauthn/main.js" defer></script>
     <script src="{{system_base}}/dist/jquery/jquery.min.js"></script>
     <script src="{{system_base}}/plugins/jquery-ui-1.11.4/jquery-ui.min.js"></script>
@@ -38,6 +40,7 @@
     <link rel="stylesheet" href="{{system_base}}/dist/bootstrap3-editable/css/bootstrap-editable.css" />
     <script src="{{system_base}}/dist/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     
+    <link rel="stylesheet" href="{{system_base}}/AdminLTE/plugins/iCheck/all.css">
 
     {% for c in css %}
     <link rel="stylesheet" href="{{c|raw}}">
@@ -66,7 +69,7 @@
 
     <script src="{{system_base}}/js/vue-gql.js"></script>
     <script src="{{system_base}}/js/jquery.form-data.js"></script>
-
+    <script src="{{system_base}}/AdminLTE/plugins/iCheck/icheck.min.js"></script>
     
 </head>
 
