--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -1,17 +1,114 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>alt-component</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but alt-component doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+<html>
+
+<head>
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+
+    <script src="/lib/iCheck/icheck.min.js"></script>
+    <link rel="stylesheet" href="/lib/iCheck/all.css" />
+
+    <script src="/lib/bootstrap-datepicker-1.8.0/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet" href="/lib/bootstrap-datepicker-1.8.0/css/bootstrap-datepicker.min.css" />
+
+    <link rel="stylesheet" href="/lib/bootstrap-datetimepicker-4.17.47/build/css/bootstrap-datetimepicker.min.css" />
+    <script src="/lib/bootstrap-datetimepicker-4.17.47/build/js/bootstrap-datetimepicker.min.js"></script>
+
+    <link rel="stylesheet" href="/lib/daterangepicker-master/daterangepicker.css" />
+    <script src="/lib/daterangepicker-master/daterangepicker.js"></script>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.min.js"></script>
+</head>
+
+<body>
+
+    <div class="container">
+        alt-component
+        <hr>
+
+        <div is="alt-rt2" :columns="[
+          {
+              name:'__view__',
+              title:'',
+              data:'__view__',
+              type:'html'
+          },{
+              name:'subrow1',
+              title:'subrow',
+              type:'sub-row'
+          }
+            
+          
+          ]" :data="[]" :ajax="{url:'http://127.0.0.1/testdata.php'}" :responsive="false" cell-url :page-length="25" :selectable="false" :buttons="[]" :exports="[]" :order="[]"></div>
+
+        <!-- div id="div1">
+
+            < select is="select2" name="domain_id" value="2699">
+                <option>Please select</option>
+                <option value="2699">[2531] *.clubwheelock.hostlink.com.hk</option>
+                <option value="1739">[1730] 123sbasia.com</option>
+                <option value="1740">[1731] 123sbasia.net</option>
+            </select>
+
+            <alt-e>
+                <input type="text" is="alt-input" value='test' />
+            </alt-e>
+
+            <form>
+                <alt-box>
+                    <alt-box-header>header1</alt-box-header>
+                    <alt-box-body>
+                        body
+                    </alt-box-body>
+                </alt-box>
+
+                ALT Input
+                <div class="form-group">
+                    <input is="alt-input" value="test" required />
+                </div>
+
+                <div class="form-group">
+                    <icheck></icheck>
+                </div>
+
+                <datepicker></datepicker>
+                <datepicker value="2010-01-03"></datepicker>
+
+
+                <alt-date required value="2010-01-02"></alt-date>
+                <alt-datetime required value="2010-01-02"></alt-datetime>
+
+
+                <alt-e header="alt-e header 1">
+
+                    <div class="form-group">
+                        <alt-email></alt-email>
+
+                    </div>
+
+                </alt-e>
+
+
+                <button type="submit">OK</button>
+
+
+
+            </form>
+
+
+        </div -->
+    </div>
+
+</body>
+
 </html>
