--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -36,7 +36,13 @@
         alt-component
         <hr>
 
-        <div is="alt-rt2" :columns="[
+        <input type="checkbox" name="test[]"/>
+
+        <input type="checkbox" name="clientservices[]" is="icheck" value="1" />
+        <input type="checkbox" name="clientservices[]" is="icheck" value="123"/>
+        <input type="checkbox" name="clientservices[]" is="icheck" value="456" />
+
+        <!--div is="alt-rt2" :columns="[
           {
               name:'__view__',
               title:'',
@@ -49,7 +55,7 @@
           }
             
           
-          ]" :data="[]" :ajax="{url:'http://127.0.0.1/testdata.php'}" :responsive="false" cell-url :page-length="25" :selectable="false" :buttons="[]" :exports="[]" :order="[]"></div>
+          ]" :data="[]" :ajax="{url:'http://127.0.0.1/testdata.php'}" :responsive="false" cell-url :page-length="25" :selectable="false" :buttons="[]" :exports="[]" :order="[]"></div -->
 
         <!-- div id="div1">
 
