--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -34,6 +34,9 @@
 
     <div class="container">
         alt-component
+
+        <icheck v-model="c1"></icheck>
+
         <hr>
 
         <div is="alt-grid" grid-num="0" data-uri="User/v/grid[0]" :sortable="true">
