--- a/AdminLTE/index.html
+++ b/AdminLTE/index.html
@@ -39,8 +39,8 @@
 
     <script src="{{system_base}}/dist/bootstrap-multiselect/js/bootstrap-multiselect.js"></script>
 
-    <!-- link rel="stylesheet" href="{{system_base}}/dist/bootstrap3-editable/css/bootstrap-editable.css" />
-    <script src="{{system_base}}/dist/bootstrap3-editable/js/bootstrap-editable.min.js"></script -->
+    <link rel="stylesheet" href="{{system_base}}/dist/bootstrap3-editable/css/bootstrap-editable.css" />
+    <script src="{{system_base}}/dist/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
 
     <link rel="stylesheet" href="{{system_base}}/plugins/icheck-1.0.2/skins/all.css">
 
