--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -39,7 +39,14 @@
         alt-component test
 
         <div id="div-input">
+
+            <div class="form-group">
+                <alt-email required value="raymond@hostlink.com.hk" name="email" id="email"></alt-email>
+            </div>
+
+
             <input is="alt-input" class="abc" required name="test" type="text" v-model="a" />
+
 
             <div ref="d1"></div>
 
@@ -59,12 +66,13 @@
                     el: "#div-input",
 
                     data: {
+                        email: "raymond@hostlink.com.hk",
                         a: "hello",
                         r: "2019-11-05 - 2019-12-19"
                     },
                     methods: {
                         updateDateRange() {
-                            this.r="2019-11-08 - 2019-12-18";
+                            this.r = "2019-11-08 - 2019-12-18";
                         },
                         onInputRange(e, p) {
                             console.log(e, p.startDate, p.endDate);
