--- a/alt-component/public/index.html
+++ b/alt-component/public/index.html
@@ -41,7 +41,7 @@
         <div id="div-input">
 
             <div class="form-group">
-                <alt-email required value="raymond@hostlink.com.hk" name="email" id="email"></alt-email>
+                <alt-email sm required value="raymond@hostlink.com.hk" name="email" id="email"></alt-email>
             </div>
 
 
